Date/Time						What happened

Feb 18, 8:04pm                                  Fixed broken links
Feb 18, 7:59pm                                  Finished routing
Feb 18, 6:50pm					New database table
Feb 18, 6:15pm					Placeholder views
Feb 18, 5:30pm					Database queries
Feb 17, 10:21pm					Database fixes
Feb 17, 9:20pm					Database changes
Feb 17, 7:19pm					Page layout
Feb 17, 4:12pm					Edited autoload.php : database library
Feb 17, 3:52pm					Added stockticker.sql
Feb 9, 5:05pm					Added .htaccess
Feb 9, 4:38pm					Added .gitignore
Feb 9, 4:16pm					Initial commit